updated index.html and main.css

--- a/index.html
+++ b/index.html
@@ -20,38 +20,39 @@
                 Discover the benefits of data analytics and make better decisions regarding revenue, 
                 customer experience, and overall efficiency.
             </p>
-
-            <table>
-                <tr>
-                    <th><h2>10k+</h2></th>
-                </tr>
-                <tr>
-                    <td>companies</td>      
-                </tr>
-            </table>
-
-            <table>
-                <tr>
-                    <th><h2>314</h2></th>
-                </tr>
-                <tr>
-                    <td>templates</td>
-                </tr>
-            </table>
-
-            <table>
-                <tr>
-                    <th><h2>12M+</h2></th>
-                </tr>
-                <tr>
-                    <td>queries</td>
-                </tr>
-            </table>
+            <div>
+                <table>
+                    <tr>
+                        <th><h2>10k+</h2></th>
+                    </tr>
+                    <tr>
+                        <td>companies</td>      
+                    </tr>
+                </table>
+    
+                <table>
+                    <tr>
+                        <th><h2>314</h2></th>
+                    </tr>
+                    <tr>
+                        <td>templates</td>
+                    </tr>
+                </table>
+    
+                <table>
+                    <tr>
+                        <th><h2>12M+</h2></th>
+                    </tr>
+                    <tr>
+                        <td>queries</td>
+                    </tr>
+                </table>
+            </div>
         </section>
 
         <section class="picture-section">
             <picture>
-                <source media="(min-width: 800px)" srcset="img/image-header-desktop.jpg">
+                <source media="(min-width: 821px)" srcset="img/image-header-desktop.jpg">
                 <img src="img/image-header-mobile.jpg" alt="picture of business team">
             </picture>    
         </section>
