updated index.html and main.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend+Deca">
 </head>
 <body>
-    <main>
+    <section class="card">
         <section class="info-section">
             <h1>Get <span>insights</span> that help your business grow.</h1>
 
@@ -23,7 +23,7 @@
             <div>
                 <table>
                     <tr>
-                        <th><h2>10k+</h2></th>
+                        <th>10k+</th>
                     </tr>
                     <tr>
                         <td>companies</td>      
@@ -32,7 +32,7 @@
     
                 <table>
                     <tr>
-                        <th><h2>314</h2></th>
+                        <th>314</th>
                     </tr>
                     <tr>
                         <td>templates</td>
@@ -41,7 +41,7 @@
     
                 <table>
                     <tr>
-                        <th><h2>12M+</h2></th>
+                        <th>12M+</th>
                     </tr>
                     <tr>
                         <td>queries</td>
@@ -56,6 +56,6 @@
                 <img src="img/image-header-mobile.jpg" alt="picture of business team">
             </picture>    
         </section>
-    </main>
+    </section>
 </body>
 </html>
