updated index.html and main.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend+Deca">
 </head>
 <body>
-    <section class="card">
+    <div class="card">
         <section class="info-section">
             <h1>Get <span>insights</span> that help your business grow.</h1>
 
@@ -50,12 +50,12 @@
             </div>
         </section>
 
-        <section class="picture-section">
+        <div class="picture-section">
             <picture>
                 <source media="(min-width: 821px)" srcset="img/image-header-desktop.jpg">
                 <img src="img/image-header-mobile.jpg" alt="picture of business team">
             </picture>    
-        </section>
-    </section>
+        </div>
+    </div>
 </body>
 </html>
