--- a/index.html
+++ b/index.html
@@ -22,20 +22,18 @@
                     customer experience, and overall efficiency.
                 </p>
 
-                <ul class="card-list">
-                    <div>
-                        <li class="stat-item">10k+</li>
-                        <li class="stat-heading-item">companies</li>
-                    </div>
-                    <div>
-                        <li class="stat-item">314</li>
-                        <li class="stat-heading-item">templates</li>
-                    </div>
-                    <div>
-                        <li class="stat-item">12M+</li>
-                        <li class="stat-heading-item">queries</li>
-                    </div>
-                </ul>
+                <div>
+                    <p class="stat-item">10k+</p>
+                    <p class="stat-heading-item">companies</p>
+                </div>
+                <div>
+                    <p class="stat-item">314</p>
+                    <p class="stat-heading-item">templates</p>
+                </div>
+                <div>
+                    <p class="stat-item">12M+</p>
+                    <p class="stat-heading-item">queries</p>
+                </div>
             </section>
     
             <picture class="picture-section">
