--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Frontend Mentor | Stats Preview Card Component</title>
 
         <!--tab icon-->
-        <link rel="stylesheet" type="image/png" href="img/favicon-32x32.png" />
+        <link rel="icon" type="image/png" href="img/favicon-32x32.png" />
 
         <!--css-->
         <link rel="stylesheet" href="css/main.css" />
